Fixes link jumps from navigation bar on project settings page

--- a/website/static/css/site.css
+++ b/website/static/css/site.css
@@ -1139,6 +1139,12 @@ h1.unavailable {
     font-style: italic;
 }
 
+.anchor {
+    margin-top: -50px;
+    padding-top: 50px;
+    display: block;
+}
+
 /* Search */
 .navigate
     {
